--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         </td>
     </tr>
     <tr >    
-        <td style="width:auto;padding-top: 10px;" align="center"><form action="google.php"><img src="search.png" width="15px" class="searc">
+        <td style="width:auto;padding-top: 10px;" align="center"><form action="https://google.com/search"><img src="search.png" width="15px" class="searc">
 
         <input type="text" id="search" placeholder="Search Google or type a URL" taction="google.php"></form></td>
         <img src="mic.png" width="30px" class="searc" style="margin-left: 245px;margin-top: 133px;">
