--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <tr >    
         <td style="width:auto;padding-top: 10px;" align="center"><form action="https://google.com/search"><img src="search.png" width="15px" class="searc">
 
-        <input type="text" id="search" placeholder="Search Google or type a URL" taction="google.php"></form></td>
+        <input type="text" id="search" placeholder="Search Google or type a URL" value="I'm Feeling Lucky" formaction="https://google.com/search?q=%s&btnI=I%27m+Feeling+Lucky"></form></td>
         <img src="mic.png" width="30px" class="searc" style="margin-left: 245px;margin-top: 133px;">
     </tr>
     </table>
